<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_16dp_rounded_white"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/add_k_pop_idol"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/stage_name"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtStageName"
        style="@style/edt_add_style"
        android:hint="@string/type_stage_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/company"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCompany"
        style="@style/edt_add_style"
        android:hint="@string/type_company" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/group"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtGroup"
        style="@style/edt_add_style"
        android:hint="@string/type_group" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/role"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtRole"
        style="@style/edt_add_style"
        android:hint="@string/type_role" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_gradient"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>